- Adição das tabs e da lógica do adapter para o RecyclerView de vinhos - Adição das bibliotecas Picasso e OkHttp para futura obtenção das imagens no network

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,4 +7,11 @@
         android:id="@+id/toolbar"
         layout="@layout/toolbar" />
 
+    <fragment
+        android:id="@+id/fragment_main"
+        android:name="evino.test.com.br.testevino.fragments.FragmentTabsMain"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/toolbar"/>
+
 </RelativeLayout>
